--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <source src="audio/GoodStarts.mp3" type="audio/mp3">
           </audio>
         </div>
-        <div>Invisible - Designed by <a href="//github.com/rozaxe/invisible">Rozaxe</a></div>
+        <div>Invisible - Designed by <a href="//github.com/rozaxe/invisible">rozaxe</a></div>
       </footer>
     </div>
     <script src="js/app.js"></script>
