--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-
-<!-- Invisible-->
-<!-- GPL - Copyright (c) 2014 Rozaxe-->
-<!-- http://www.vergamote.com/invisible--><!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Invisible</title>
